== 0.3.99 2009-09-03

=== New Features
* Support for Croatian (Bkrsta)
* Make #feature available from scenario so you can do: Before{|scenario| scenario.feature}. (Aslak Hellesøy)
* cucumber.yml parsing supports ERB syntax (#427 Gregory Hnatiuk)
* New AfterConfiguration hook added; a block can be specified that takes Cucumber::Cli::Configuration (#423 Brent Snook)
* Cucumber::Cli::Configuration#feature_dirs and #out_stream exposed as public attributes so that they may be used in AfterConfiguration hook (#423 Brent Snook)

== 0.3.98 2009-08-25

Just a small release to help Cuke4Duke, which will be presented at Agile2009
in 2 days.

=== New Features
* Backtrace filtering now happens in StepInvocation class, meaning other languages (Cuke4Duke) can get backtraces stripped. (Aslak Hellesøy)
* Cucumber::Ast::Table#map_headers now allows for a block that will convert all the headers. See docs for details. (Ben Mabey)

== 0.3.97 2009-08-23

The AA-FTT release. Creating a release for the AA-FTT meeting in Chicago so that we can play
with the new language API and maybe knock out some better .NET support.

=== Bugfixes
* Allow comments on examples sections underneath scenario outlines (#420 Mike Sassak)
* Table.map_headers! will fail with a decent error message when 0 or 2+ headers are matched. (Aslak Hellesøy)
* Fixed an issue with comments with preceding spaces after a background causing a parse error (#401 Joseph Wilk)

=== New Features
* The public API is documented and there is a new :sdoc task to generate nice searchable API docs.
* Add :default => :cucumber when setting up Rake tasks for Cucumber in Rails (Aslak Hellesøy)
* New When /^I fill in "([^\"]*)" for "([^\"]*)"$/ Webrat step for Rails (Aslak Hellesøy)

=== Changed Features
* Changed the Programming Language API to support languages without "bleed through" (e.g. rubypython can't invoke ruby objs) (Aslak Hellesøy)