@@ -1,3 +1,8 @@
+== (In Git)
+
+=== New Features
+* The file argument on the cucumber command line will replace contents of file on cli if file is prefixed with @ (Tero Tilus)
+
 == 0.3.99 2009-09-03
 
 === New Features
